[package]
name = "rust-gb"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["zlfn <ung@zlfn.space>"]
license = "MIT AND GPL-2.0 WITH GNU-compiler-exception"
readme = "README.md"
description = """
Compile Rust code to Nintendo GameBoy
"""
keywords = ["gameboy", "retro", "cross-compiler"]
repository = "https://github.com/zlfn/rust-gb"
exclude = [
	"ext/*",
	"media/*",
	"examples/*"
]

# rust-gb library
[lib]
name = "gb"
path = "src/lib/lib.rs"

# rust-gb compiler
[[bin]]
name = "cargo-build-rom"
path = "src/bin/build-rom/main.rs"
required-features = ["compiler"]

[dependencies]
# Binary dependencies
clap = { version = "4.5.17", features = ["derive", "cargo"], optional = true }
colored = { version = "3.0.0", optional = true }
tree-sitter = { version = "0.24.6", optional = true }
tree-sitter-c = { version = "0.23.4", optional = true }
thiserror = { version = "2.0.11", optional = true }
include_dir = { version = "0.7.4", optional = true }
ast-grep-core = { version = "0.33.0", optional = true }
ast-grep-language = { version = "0.33.0", optional = true }
# Library dependencies
document-features = "0.2"
voladdress = "1.4.0"
streaming-iterator = "0.1.9"

[features]
default = ["compiler"]
#! ### Library features

## GameBoy Color feature
##
## This feature enables GameBoy Color only features.
## Such as VRAM bank or color palette.
##
## Since the compiler does not yet support compilation in to GameBoy Color ROM, 
## this will not actually work.
color = []

## Prototype feature
##
## This feature enables the prototype APIs of Rust-GB.
## Because it's a prototype, it won't work properly.
prototype = []

#! ### Binary features

## Feature for compiler
##
## This feature needed to enabled when you install Rust-GB compiler with `cargo install`.
## 
## DO NOT enable this feature in your GameBoy ROM package. It will cause compile error.
## This is because the Rust-GB compiler cannot be compiled for ATMega328 target.
compiler = [
	"clap", 
	"colored", 
	"tree-sitter", 
	"tree-sitter-c", 
	"thiserror",
	"include_dir",
	"ast-grep-core",
	"ast-grep-language",
]

